bug: contact class is not working

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 #showContact{
-    display: none;
+    /* display: none; */
 }
 
 .contact{
     cursor: pointer;
     color: #0088cc;
+    background-color: yellow;
 }
 
 .contact:hover{
